added back buttons to indexes

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -41,5 +41,7 @@
     <% end %>
     </div>
   </div>
-
+  <div class="form-actions">
+    <%= link_to "Back", :back %>
+  </div>
     <div class="push"></div>
