--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -18,5 +18,7 @@
     <% end %>
     </div>
   </div>
-
+  <div class="form-actions">
+    <%= link_to "Back", :back %>
+  </div>
     <div class="push"></div>
