--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -37,4 +37,7 @@
   </div>
 <div class="push"></div>
 <div class="push"></div>
+      <div class="form-actions">
+        <%= link_to "Back", :back %>
+      </div>
 <div class="push"></div>
