fixed the back button colliding with other elements

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -18,6 +18,7 @@
     <% end %>
     </div>
   </div>
+  <div class="push"></div>
   <div class="form-actions">
     <%= link_to "Back", :back %>
   </div>
