--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -41,6 +41,7 @@
     <% end %>
     </div>
   </div>
+    <div class="push"></div>
   <div class="form-actions">
     <%= link_to "Back", :back %>
   </div>
