--- a/app/assets/stylesheets/components/_trip_owner.scss
+++ b/app/assets/stylesheets/components/_trip_owner.scss
@@ -105,7 +105,7 @@ a {
 }
 
 .trip-txt-style {
-  background-color: black;
+  background-color: $background;
   color: white;
   text-transform: capitalize;
   border-radius: 8px;
@@ -114,4 +114,12 @@ a {
 .text-description {
   text-align: justify;
   text-justify: inter-word;
+}
+
+.trip-Location {
+  justify-content: center;
+
+  p {
+    font-size: 20px;
+  }
 }
