added meta for OG picture

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TravelTribe1</title>
+    <title>Travel Tribe is a community where people can list, discover and book unique trip plans with friends or strangers all over the world online</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="Travel Tribe is a community where people can list, discover and book unique trip plans with friends or strangers all over the world online" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/dhilged09/image/upload/v1647868499/production/OG_roikcx.png" />
+    <meta property="og:url" content="trvltribe.com" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag asset_path('favicon.ico') %>
