created yml meta file, initializer and helper to have a fallback meta designator

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="pre-card-animation">
-        <h1>Trips all over Rio de Janeiro</h1>
+        <h1>Trips all over South America</h1>
       </div>
     <div class="home-layout">
       <div class="trip-card">
