On trips, users profiles are now clickable and linked to users

--- a/app/assets/stylesheets/components/_trip_owner.scss
+++ b/app/assets/stylesheets/components/_trip_owner.scss
@@ -120,6 +120,10 @@ a {
   justify-content: center;
 
   p {
-    font-size: 20px;
+    font-size: 15px;
   }
+}
+
+.people-price {
+  justify-content: space-around;
 }
