--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
                     <h2 class="pb-2"><strong> <%= trip.name %></strong></h2>
                     <ul>
                       <li class="mb-2 mt-1 me-0">
-                        <h4><%= trip.start_date.strftime("%d.%B") %> - <%= trip.end_date.strftime("%d.%B%.%Y") %> </h4>
+                        <h4><%= trip.start_date.strftime("%d.%B") %> - <%= trip.end_date.strftime("%d.%B.%Y") %> </h4>
                         
                       </li>
                     </ul>
@@ -49,16 +49,14 @@
                           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-icon" %>
                         <% end %>
                       <% end %>
-                    <!--<img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
-                    <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">-->
                   </div>
+
                   <div class="p-3 flex-fill bd-highlight">
                     <div class="d-flex p-1 pt-2 mb-4 ms-4 bd-highlight">
                       <div class="d-flex bd-highlight">
                         <h6 class="me-1 avarage-rating"><%= trip.average_rating %></h6>
                         <i class="pb-1 fas fa-heart"></i>
                       </div>
-                      <p class="ms-3"><%= trip.reviews.length %> reviews</p>
                     </div>
                       <div class= "mt-4 mb-2 tags">
                         <div class="row mb-1">
