--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -57,17 +57,39 @@
       <!-- TRIP INFO -->
        <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0 trip-descript">
           <h1 class="text-center trip-txt-style"><%= @trip.name %></h1>
-          <div class="trip-Location d-flex">
-            <p class="trip-date me-2"><%= @trip.start_date.strftime("%d") %> - <%= @trip.end_date.strftime("%d.%B/%Y") %></p>
-            <p>|</p>
-            <p class="text-center ms-2"><%= @trip.address  %></p>
-          </div>
+          <div class="info-card p-3">
+            <div class="trip-Location d-flex p-2">
+              <p class="trip-date me-2"><%= @trip.start_date.strftime("%d") %> - <%= @trip.end_date.strftime("%d.%B/%Y") %></p>
+              <p>|</p>
+              <p class="text-center ms-2"><%= @trip.address  %></p>
+            </div>
 
-          <div class="people-price">
-           <p><%= @trip.max_guests %> people </p>
+            <div class="people-price d-flex p-2">
+            <h3><%= @trip.max_guests %> people </h3>
+
+            
+            <h3>$<%= average_price %> per person</h3>
+            </div>
+            <div class="profile-photos">
+              
+                <% if @trip.user.photo.attached? %>
+                  <%= cl_image_tag @trip.user.photo.key, crop: :fill, class: "profile-icon" %>
+                <% else %>
+                  <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-icon" %>
+                <% end %>
+                <% @trip.bookings.each do |booking| %>
+                 <%= link_to user_path(booking.user), class: "link_to_class" do %>
+                  <% if booking.user.photo.attached? %>
+                    <%= cl_image_tag booking.user.photo.key, crop: :fill, class: "profile-icon" %>
+                  <% else %>
+                    <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-icon" %>
+                  <% end %>
+                <% end %>
+              <% end  %>
+            </div>
           </div>
           <h2 class="trip-txt-style text-center">Something about the trip</h2>
-          <h4 class="trip-description"><%= @trip.description  %></h4>
+          <h4 class="trip-description"><%= @trip.description %></h4>
         </div>
 
         <!-- TRIP IMAGE -->
