--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,12 +36,10 @@
         <h3 class="mt-4 pt-4"> Let the world know about yourself! </h3>
         <label for="exampleFormControlInput1" class="mt-4 pt-3 form-label d-flex flex-column">Your bio goes down here:</label>
         <%= f.text_area :bio,
-                    required: false, class:"review-box", required: true, minlength: 30,
-                    input_html: { placeholder: "I like hiking, surfing and anything else that's outdoors related..." } %>
+                    required: false, class:"review-box", required: true, minlength: 30, placeholder: "I like hiking, surfing and anything else that's outdoors related..."%>
         <label for="exampleFormControlInput1" class="form-label d-flex flex-column">What kind of traveler are you:</label>
         <%= f.text_area :traveltype,
-                    required: false, class:"review-box", required: true, minlength: 30,
-                    input_html: { placeholder: "How would you describe yourself as a traveler? Are you scrappy or spend a lot? How do you react in extreme situations? What do you value the most about the people you travel with? What would your perfect trip look like?" } %>
+                    required: false, class:"review-box", required: true, minlength: 30, placeholder: "How would you describe yourself as a traveler? Are you scrappy or spend a lot? How do you react in extreme situations? What do you value the most about the people you travel with? What would your perfect trip look like?"  %>
         <%= f.input :languages,
                     required: false,
                     input_html: { placeholder: "I speak English, german, spanish ...." } %>
