--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
                 <% if @user.photo.attached? %>
                   <%= cl_image_tag @user.photo.key %>
                 <% else %>
-                  <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
+                  <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg" %>
                 <% end %>
               </div>
                 <!--<img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">-->
