--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,13 +40,13 @@
                       <% if trip.user.photo.attached? %>
                         <%= cl_image_tag trip.user.photo.key, crop: :fill, class: "profile-icon" %>
                       <% else %>
-                        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-icon" %>
+                        <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
                       <% end %>
                       <% trip.bookings.each do |booking| %>
                         <% if booking.user.photo.attached? %>
                           <%= cl_image_tag booking.user.photo.key, crop: :fill, class: "profile-icon" %>
                         <% else %>
-                          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-icon" %>
+                          <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
                         <% end %>
                       <% end %>
                   </div>
