--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,11 +1,16 @@
-<h1>Edit Review</h1>
+<div class="container mx-auto mb-5">
+  <h1>Edit Review</h1>
+  <%= simple_form_for ([@trip, @review]) do |f| %>
+    <%= f.input :rating, collection: 1..5, input_html: { class: 'review-box-small' }%>
+    <%= f.input :title, input_html: { class: 'review-box-small' }, required: true %>
+    <div class="mb-4">
+      <label for="exampleFormControlInput1" class="form-label d-flex flex-column">Write your review down here:</label>
+      <%= f.text_area :comment, class:"review-box", required: true, minlength: 5 %>
+    </div>
+    <div class="d-flex">
+      <%= f.submit %>
+      <%= link_to "Back", :back, class:"btn mt-0" %>
+    </div>
+  <% end %>
+</div>
 
-<%= simple_form_for ([@trip, @review]) do |f| %>
-  <%= f.input :rating, collection: 1..5, input_html: { class: 'review-box-small' }%>
-  <%= f.input :title, input_html: { class: 'review-box-small' }, required: true %>
-  <div class="mb-4">
-    <label for="exampleFormControlInput1" class="form-label d-flex flex-column">Write your review down here:</label>
-    <%= f.text_area :comment, class:"review-box", required: true, minlength: 5 %>
-  </div>
-  <%= f.submit %>
-<% end %>
