--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mx-auto">
   <div class="mb-4">
     <h1>Leave a Review!</h1>
   </div>
@@ -7,7 +7,7 @@
   <%= f.input :title, input_html: { class: 'review-box-small' }, required: true %>
   <div class="mb-4">
     <label for="exampleFormControlInput1" class="form-label d-flex flex-column">Write your review down here:</label>
-    <%= f.text_area :comment, class:"review-box", required: true, minlength: 5 %>
+    <%= f.text_area :comment, class:"review-box p-4", required: true, minlength: 5 %>
   </div>
   <%= f.submit %>
 <% end %>
