User page css redesign

--- a/app/assets/stylesheets/components/_edit_profile.scss
+++ b/app/assets/stylesheets/components/_edit_profile.scss
@@ -8,13 +8,9 @@
   color: rgba(0, 0, 0, 0.6);
 }
 
-.user-info-edit {
-  font-style: italic;
-  justify-content: space-between;
-}
 
 .user-info-about {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #95BBBF;;
   color: white;
   padding: 25px;
   border-radius: 7px;
