edited trip create form, changed schema so that description is seen as text instead of string

--- a/app/assets/stylesheets/components/_trip_planner.scss
+++ b/app/assets/stylesheets/components/_trip_planner.scss
@@ -12,6 +12,7 @@
   margin: 25vw;
   justify-content: center;
   align-items: center;
+  width: 50vw;
 }
 
 .modal-body button {
@@ -23,6 +24,44 @@
 }
 
 .modal-body button:hover {
+  background-color: black;
+  color: white;
+}
+
+.modal-body .form-control {
+  background-color: white;
+  border-color: grey;
+  border-radius: 10px;
+  width: 40vw;
+  font-size: 25px;
+}
+
+.modal-body .form-label {
+  font-size: 35px;
+}
+
+.modal-body .mapboxgl-ctrl-geocoder--input {
+  background-color: white;
+  border-color: grey;
+  border-radius: 10px;
+  width: 40vw;
+  font-size: 25px;
+}
+
+.modal-body .form-select {
+  background-color: white;
+  border-color: grey;
+  border-radius: 10px;
+  font-size: 25px;
+}
+
+.modal-body .submit_button {
+  background-color: white;
+  border-color: black;
+  border-radius: 10px;
+}
+
+.modal-body .submit_button:hover {
   background-color: black;
   color: white;
 }
