Tried adding some styling to the email. Also removed underline from the profile edit

--- a/app/assets/stylesheets/components/_user_profilecard.scss
+++ b/app/assets/stylesheets/components/_user_profilecard.scss
@@ -45,11 +45,10 @@
 .edit-profile {
   display: flex;
   justify-content: center;
-  text-decoration: underline;
 
-    & :hover {
-      color: dimgray;
-    }
+    // & :hover {
+    //   color: dimgray;
+    // }
 }
 
 .edit-profile-items {
