--- a/app/views/user_mailer/join.html.erb
+++ b/app/views/user_mailer/join.html.erb
@@ -1,23 +1,35 @@
+<!DOCTYPE html>
+<html>
+<head>
 <style>
-.email-title {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  text-align: center;
-}
-
 </style>
-<h1 class="email-title">TRAVEL TRIBE</h1>
+</head>
+<body style="margin: 0; padding: 0;">
+  <table bordercolor="#FFF" align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+    <tr>
+    <td bgcolor="rgba(0, 0, 0, 0.6)" style="padding: 40px 30px 40px 30px; color: #FFFFFF">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+     <tr>
+      <td>
+        <h1 class="email-title">TRAVEL TRIBE</h1>
+      </td>
+     </tr>
+     <tr>
+      <td>
+        <h4 class="">Hi <%= @user.full_name %>,</h4>
+          <p>Happy days!!! Somebody just request to join your trip!</p>
+          <p>Go check it out and see if you approve that person!</p>
+          <%#= link_to trip_path(trip) "Review Request", class: "link_to_class" %>
+          <a href="#">Review Request</a>
 
-<h2>
-  <%= @greeting %>
-</h2>
-
-<div class="container">
-  <h4 class="">Hi <%= @user.full_name %>,</h4>
-
-  <p>Happy days!!! Somebody just request to join your trip!</p>
-  <p>Go check it out and see if you approve that person!</p>
-  <a href="#">Review Request</a>
-
-<p>See ya!</p>
-</div>
+          <p>See ya!</p>
+      </td>
+     </tr>
+     <br>
+    
+    </table>
+   </td>
+    </tr>
+  </table>
+</body>
+</html>
