--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,11 @@
         <div class="banner-text">
           <h1>Make friends, save </h1>
           <h1>money, travel more.</h1>
+          <!--
           <div class="btn">
-            <%= link_to "Search Now", href="#card-product", class: "search-btn" %>
+            <%#= link_to "Search Now", href="#card-product", class: "search-btn" %>
           </div>
+          -->
         </div>
       </div>
       <div class="pre-card-animation">
