--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer mt-1">
+<div class="footer mt-1 fixed-bottom">
   <div class="footer-links d-flex">
     <p class="p_footer">&copy TribeTeam <i class="fas fa-anchor"></i></p>
     <%= link_to "Join the Comunity", new_user_registration_path, class: "join" %>
