--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,7 +15,7 @@
 
 .review-button {
   width: 204px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
   color: $white;
   padding: 10px;
 
@@ -23,6 +23,10 @@
     background-color: rgba(0, 0, 0, 0.8);
     color: $white;
   }
+}
+
+.btn-dark {
+  border-color: none;
 }
 
 .edits {
