--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -19,7 +19,7 @@
             <h1 class="owner fs-1 text-center">Welcome to <%= @trip.user.user_name %>'s trip!</h1>
           </div>
         </div>
-          <div class="d-flex ms-4 icons">
+          <div class="d-flex mx-auto mt-4 icons">
             <% unless @trip.user == current_user %>
               <%= simple_form_for [@trip, @booking] do |f| %>
                 <%= f.button :submit, "Join The Trip", class: "btn btn-dark join-btn" %>
