updated colors on booking page

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,7 +38,7 @@
 
   a {
     text-decoration: none;
-    background-color: #B2B2B2;
+    background-color: $background;
     padding: 4px 10px;
     border-radius: 6px;
     border: 1px solid;
