--- a/app/assets/stylesheets/components/_edit_profile.scss
+++ b/app/assets/stylesheets/components/_edit_profile.scss
@@ -10,7 +10,7 @@
 
 
 .user-info-about {
-  background-color: #95BBBF;;
+  background-color: $background;
   color: white;
   padding: 25px;
   border-radius: 7px;
@@ -21,7 +21,7 @@
 .user-booking,
 .user-Favorites,
 .pending-request-title {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: $background;
   color: white;
 }
 
