--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
                     <ul>
                       <li class="mb-2 mt-1 me-0">
                         <h4><%= trip.start_date.strftime("%d.%B") %> - <%= trip.end_date.strftime("%d.%B.%Y") %> </h4>
-                        
+
                       </li>
                     </ul>
                     <div class="infos">
@@ -42,11 +42,13 @@
                       <% else %>
                         <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
                       <% end %>
-                      <% trip.bookings.each do |booking| %>
-                        <% if booking.user.photo.attached? %>
-                          <%= cl_image_tag booking.user.photo.key, crop: :fill, class: "profile-icon" %>
-                        <% else %>
-                          <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
+                      <% unless check_status(trip) == false%>
+                        <% trip.bookings.each do |booking| %>
+                          <% if booking.user.photo.attached? %>
+                            <%= cl_image_tag booking.user.photo.key, crop: :fill, class: "profile-icon" %>
+                          <% else %>
+                            <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
+                          <% end %>
                         <% end %>
                       <% end %>
                   </div>
