Added price back to card

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -70,7 +70,7 @@
             <h3><%= @trip.max_guests %> people </h3>
 
 
-            <h3>$<%= average_price %> per person</h3>
+            <h3>$<%= average_price(@trip) %> per person</h3>
             </div>
             <div class="profile-photos">
 
