--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,6 +51,7 @@
                           <% end %>
                         <% end %>
                       <% end %>
+                    <h3 style="display: flex; flex-direction: row-reverse;">$<%= average_price(trip) %> per person</h3>
                   </div>
 
                   <div class="p-3 flex-fill bd-highlight">
