--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -45,7 +45,7 @@
     color: white;
 
     &:hover {
-      background-color: red;
+      background-color: $close-btn;
       color: $white;
     }
   }
