--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,7 +1,7 @@
-  <div class="container">
-    <h3>Favorites</h3>
+  <div class="container mx-auto">
+    <h3 class="user-Favorites">Favorites</h3>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4" style="flex-wrap: wrap;">
+    <div class="row row-cols-1 mt-2 row-cols-md-3 g-4" style="flex-wrap: wrap;">
     <% current_user.bookmarks.each do |bookmark| %>
       <div class="col">
       <%= link_to trip_path(bookmark.trip), class: "link_to_class" do %>
@@ -22,4 +22,3 @@
   <div class="form-actions">
     <%= link_to "Back", :back %>
   </div>
-    <div class="push"></div>
