--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -88,7 +88,7 @@
 <div class="container">
 <!-- User Bookings -->
   <div class="category-header">
-    <h3>Bookings</h3>
+    <h3 class="user-booking">Bookings</h3>
     <%= link_to "See all", bookings_path(@user) %>
   </div>
   <div class="container mt-1 pt-0 mb-3 pb-3 ">
@@ -114,7 +114,7 @@
   </div>
 <!-- User Bookmarks -->
   <div class="mb-3 category-header">
-    <h3>Favorites</h3>
+    <h3 class="user-booking">Favorites</h3>
     <%= link_to "See all", bookmarks_path(@user) %>
   </div>
   <div class="container mt-1 pt-0 mb-3 pb-3 ">
