small css changes on user profile after form fill

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -54,7 +54,7 @@
                     input_html: { autocomplete: "current-password" } %>
       </div>
 
-      <div class="form-actions">
+      <div class="mb-5 pb-5 form-actions">
         <%= f.button :submit, "Update" %>
         <%= link_to "Back", :back %>
       </div>
