--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -11,7 +11,7 @@
         <div class="col d-flex mt-2">
           <p><%= review.user.full_name %>'s review: </p>
           <p class = "ps-2"><%= review.rating%></p>
-          <i class=" ms-2 fas fa-heart"></i>
+          <i class="icon-review ms-2 fas fa-heart"></i>
         </div>
     </div>
   </div>
