--- a/app/assets/stylesheets/components/_trip_owner.scss
+++ b/app/assets/stylesheets/components/_trip_owner.scss
@@ -63,8 +63,12 @@
 }
 
 .icon {
-  fill: rgba(0, 0, 0, 0.6);
+  // color: $background;
   font-size: 30px;
+}
+
+.icon-review{
+  color: $background
 }
 
 .icons {
