--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -102,7 +102,7 @@
             <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <% end %>
           <div class="card-body">
-            <h5 class="card-title">Trip name: <%= booking.trip.name %></h5>
+            <h5 class="card-title"><%= booking.trip.name %></h5>
             <p class="card-text">Location: <%= booking.trip.address %></p>
             <p class="card-text"> Date: <%= booking.trip.start_date %> - <%= booking.trip.end_date %></p>
             <p class="card-text <%= booking_status(booking) %>"><%= booking.status %></p>
@@ -128,7 +128,7 @@
             <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <% end %>
           <div class="card-body">
-            <h5 class="card-title">Trip name: <%= bookmark.trip.name %></h5>
+            <h5 class="card-title"><%= bookmark.trip.name %></h5>
             <p class="card-text">Location: <%= bookmark.trip.address %></p>
             <p class="card-text"> Date: <%= bookmark.trip.start_date %> - <%= bookmark.trip.end_date %></p>
           </div>
