--- a/app/assets/stylesheets/components/_media_queries.scss
+++ b/app/assets/stylesheets/components/_media_queries.scss
@@ -1,5 +1,11 @@
 // SMALLER MOBILE SIZE
 @media only screen and (max-width: 520px){
+  .signin-up-img {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   // CHAT
 
   .chatroom {
@@ -83,6 +89,12 @@
 
 // MOBILE SIZE
 @media only screen and (min-width: 521px) and (max-width: 767px) {
+  .signin-up-img {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .chatroom {
     width: 90%;
   }
@@ -172,6 +184,11 @@
 
 // TABLET SIZE
 @media only screen and (min-width: 768px) and (max-width: 1023px){
+  .signin-up-img {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .chatroom {
     width: 90%;
   }
